--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "buefy": "^0.9.6",
     "core-js": "^3.6.5",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
